container/resources/slack-summarizer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"slack-summarizer:latest","namespace":"hackspace-dpaolell"},"fieldPath":"spec.template.spec.containers[?(@.name==\"slack-summarizer\")].image","pause":"false"}]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"slack-summarizer","namespace":"hackspace-dpaolell"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"slack-summarizer"}},"template":{"metadata":{"labels":{"app":"slack-summarizer"}},"spec":{"containers":[{"env":[{"name":"SLACK_TOKEN","valueFrom":{"secretKeyRef":{"key":"slack_token","name":"slack-credentials"}}},{"name":"USER_TOKEN","valueFrom":{"secretKeyRef":{"key":"user_token","name":"slack-credentials [...]
  name: slack-summarizer
  namespace: hackspace-dpaolell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-summarizer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: slack-summarizer
    spec:
      containers:
      - env:
        - name: SLACK_TOKEN
          valueFrom:
            secretKeyRef:
              key: slack_token
              name: slack-credentials
        - name: USER_TOKEN
          valueFrom:
            secretKeyRef:
              key: user_token
              name: slack-credentials
        - name: LLAMA_SERVER_HOST
          valueFrom:
            configMapKeyRef:
              key: LLAMA_SERVER_HOST
              name: llama-server-config
        - name: LLAMA_SERVER_PORT
          valueFrom:
            configMapKeyRef:
              key: LLAMA_SERVER_PORT
              name: llama-server-config
        image: image-registry.openshift-image-registry.svc:5000/hackspace-dpaolell/slack-summarizer@latest
        imagePullPolicy: IfNotPresent
        name: slack-summarizer
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
