container/resources/llama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-server
spec:
  selector:
    app: llama-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
