container/resources/slack-summarizer-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: slack-summarizer
spec:
  to:
    kind: Service
    name: slack-summarizer-service
  port:
    targetPort: 8000
  tls:
    termination: edge
